# xcopr

./: Cargo.toml  README.md
src/: main.rs
test/: test_filter_equal.sh  test_map_redis.sh  test_map_word_reversal.sh
tests/: map_smoke.rs
xcopr/: Cargo.toml
xcopr-bin/: Cargo.toml
xcopr-bin/src/: main.rs
xcopr-bin/src/commands/: diagram.rs  mod.rs
xcopr-bin/tests/: edge_case_tests.rs  map_smoke.rs  mixed_mode_tests.rs  multiple_coprocess_tests.rs  template_only_tests.rs
xcopr/src/: dag.rs  exec.rs  lib.rs  parser.rs
