[package]
name = "xcopr"
authors = ["Andrew Matteson <andrewkmatteson@gmail.com>"]
version = "0.1.0"
description = "Core library for xcopr coprocessing functionality"
homepage = "https://github.com/aromatt/xcopr"
repository = "https://github.com/aromatt/xcopr"
edition = "2021"

[dependencies]
clap.workspace = true
petgraph = "0.7"
thiserror = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
pretty_assertions.workspace = true